# pydantic-2-mermaid

./: .envrc  .flake8  .mergify.yml  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  LICENSE  Pipfile  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflow/: ci.yml
.github/workflows/: ci.yml
examples/: animals.md  animals.py  country.md  country.py  country_all.md  country_inheritance.md  usa_both.md  usa_dependency.md  usa_inheritance.md
pydantic_2_mermaid/: __init__.py  __main__.py  mermaid_generator.py  models.py
pydantic_mermaid/: __init__.py  __main__.py  mermaid_generator.py  pydantic_2_parser.py  pydantic_parser.py
src/: __init__.py  __main__.py  mermaid_generator.py  pydantic_2_parser.py  pydantic_parser.py
src/pydantic_mermaid/: __init__.py  __main__.py  mermaid_generator.py  models.py  pydantic_parser.py
tests/: test_animals.py  test_basic_test.py  test_cat_dog_shop.py  test_contry.py  test_enum.py  test_gen.py  test_gen_310.py  test_gen_38.py  test_gen_3_10.py  test_gen_3_9.py  test_literal.py  test_main.py  test_marriage.py  utils.py
tests/mock/: cat_and_dogs.md  enum_example.md  enum_example.py  literal_example.md  literal_example.py  marriage.md  marriage.py  show_optional.md  show_optional.py  show_optoinal.md  type_alias.md  type_alias.py
tests/mock/py310/: show_optional.md  show_optoinal.md
tests/mock/py38/: show_optional.md  show_optional.py
tests/mock/py_3_10/: show_optional.md  show_optional.py
tests/mock/py_3_9/: annotated_example.md  annotated_example.py
