[tool.poetry]
name = "pydantic-2-mermaid"
version = "0.5.0"
description = "Convert pydantic classes to markdown mermaid class charts"
authors = ["Eric Websmith <eric.websmith@gmail.com>"]
readme = "README.md"
packages = [{include = "pydantic_mermaid", from = "src"}]
homepage = "https://github.com/EricWebsmith/pydantic_2_mermaid"

# Specify the classifiers
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.8.1"
pydantic = "^2.0.3"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
flake8-import-order = "^0.18.2"
flake8-print = "^5.0.0"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
mypy = "^1.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pydantic-mermaid = 'pydantic_mermaid.__main__:main'

[tool.pytest.ini_options]
addopts = "--cov=pydantic_mermaid --cov-report term-missing"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')"
]

[tool.black]
line-length = 119
target-version = ['py38']
