[tool.poetry]
name = "pydantic-2-mermaid"
version = "0.7.0"
description = "Convert pydantic 2.0.3+ classes to markdown mermaid class charts"
authors = ["Eric Websmith <eric.websmith@gmail.com>"]
readme = "README.md"
packages = [{ include = "pydantic_mermaid", from = "src" }]
homepage = "https://github.com/EricWebsmith/pydantic-2-mermaid"

# Specify the classifiers
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.8"
importlib-resources = "^6.1.1"
jinja2 = "^3.1.3"
pydantic = "^2.0.3"

[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
ruff = "^0.1.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pydantic-mermaid = 'pydantic_mermaid.__main__:main'

[tool.pytest.ini_options]
addopts = "--cov=pydantic_mermaid --cov-report term-missing"
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]
testpaths = ["tests"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = ["T20", "I", "N", "C4", "PT", "RET", "SIM", "PTH", "PL", "RUF", "B"]

[tool.ruff.lint.isort]
known-first-party = ["pydantic_mermaid"]
